x-9/pod-b.yaml
# pod-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: net-policy-demo
  labels:
    run: pod-b
spec:
  containers:
  - name: nginx
    image: nginx
