x-9/allow-from-pod-b.yaml
# allow-from-pod-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-pod-b
  namespace: net-policy-demo
spec:
  podSelector:
    matchLabels:
      run: pod-a  # Applies this policy to pod-a only
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: pod-b  # Allows ingress only from pod-b
  policyTypes:
  - Ingress
