x-9/deny-all-ingress.yaml
# deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: net-policy-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
